--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.4.2",
     "morgan": "^1.9.1",
-    "nodemon": "^1.18.9"
+    "nodemailer": "^5.1.1",
+    "nodemon": "^1.18.9",
+    "shortid": "^2.2.14"
   }
 }
